--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <mat-toolbar class="header d-flex">
     <a class="header__logo ml-5" routerLink="/">
-      <img src="assets/images/logo.png" alt="">
+      <!--<img src="assets/images/logo.png" alt="">-->
     </a>
     <span class="w-100"></span>
     <div class="account d-flex align-items-center mr-5"
