--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="wrapper__left d-flex flex-column w-100 h-100">
     <form class="left__form d-flex flex-column" [formGroup]="formGroup" (ngSubmit)="onSubmitClick()">
       <a class="logo align-self-start" routerLink="/">
-        <img src="assets/images/logo-gray.png" alt="">
+        <!--<img src="assets/images/logo-gray.png" alt="">-->
       </a>
       <h3 class="heading mb-4">Login</h3>
       <mat-form-field class="w-100" appearance="outline">
@@ -29,7 +29,7 @@
     </form>
   </div>
   <div class="wrapper__right right">
-    <h3 class="heading heading--primary align-self-center">Welcome to Fungible</h3>
+    <h3 class="heading heading--primary align-self-center">Angular8Coding</h3>
     <img class="right__image" src="assets/images/servers.png" alt="">
   </div>
 </div>
